<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:background="@color/colorPrimary"
    tools:context=".PlayActivity_Async">
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:layout_margin="16dp">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewAbove"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9513425877498158/8554177019">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center">

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructionText"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/strTime"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#EEEEEE" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/defaultScore"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#EEEEEE" />
        <TextView
            android:id="@+id/tvBestScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/defaultBestScore"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#EEEEEE" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.20"
        android:background="@android:color/holo_green_light"
        android:gravity="center" >

        <TextView
            android:id="@+id/num1_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:gravity="center"
            android:text="@string/randomNumber"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
    <TextView
        android:id="@+id/operator_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="+"
        android:textSize="40sp"
        android:layout_weight="0.20"
        />
    <TextView
        android:id="@+id/num2_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.40"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/SecondNumber"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/optionLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/option1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="@string/one_half"
                android:background="@drawable/btn_options"
                android:text="@string/Option1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/option2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@string/one_half"
                android:background="@drawable/btn_options"
                android:text="@string/Option2"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/option3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="@string/one_half"
                android:background="@drawable/btn_options"
                android:text="@string/Option3"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/option4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@string/one_half"
                android:background="@drawable/btn_options"
                android:text="@string/Option4"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_margin="16dp">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewBelow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-9513425877498158/8554177019">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</LinearLayout>