<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <!--
    https://www.mathnasium.com/explain-mathematical-thinking
    Image taken rom this
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="0.4">
        <TextView
            android:id="@+id/tvMainInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructionText"
            android:gravity="center"
            android:background="@android:color/holo_green_light"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/setTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:background="#008577"
            android:textColor="#FFFFFF"
            android:text="@string/setTimeMessage"/>
        <Spinner
            android:id="@+id/timerSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/holo_green_light"
            android:prompt="@string/setTimeMessage">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">
    <TextView
        android:id="@+id/setDifficultyLevelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:background="#008577"
        android:text="@string/setDifficultyLevelMessage"/>
    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:prompt="@string/setDifficultyLevelMessage">
    </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="playGame"
        android:text="@string/play_button"
        android:textColor="#000000"
        android:textSize="24sp"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:background="@drawable/btn_resource"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-9513425877498158/8554177019">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</LinearLayout>